<resources>
    <string name="app_name">SELDAVINE TREE TRACKER</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="noofTrees">No of Trees</string>
    <string name="submitTree">Report Afforestation</string>

    <!--Add location-->

    <!-- empty latitude -->

    <!--location-->

    <!--General string-->
    <string name="permissions_loader_meta_key">1</string>

    <!--parse server details-->
    <string name="parse_server_url">https://tree-app.herokuapp.com/parse</string>
    <string name="parse_app_id">tree-tracking</string>

    <string-array name="Gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="AccoutType">
        <item>Select Account Type</item>
        <item>Individual</item>
        <item>Organization</item>
    </string-array>

    <string-array name="TreeType">
        <item>Select the tree type</item>
        <item>Economic</item>
        <item>Non Economics</item>
    </string-array>

    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="submitTree1">Report Deforestation</string>
    <string name="ok">OK</string>
    <string name="click">Click here to Accept all Permissions</string>

    <string name="password_recovery">Recover your password</string>
    <string name="hint_email">Email</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="forgot_password_msg">Put your registered Email Id to receive password reset instructions.</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="points">Points</string>
    <string name="reportFire">Report Forest Fire</string>
    <string name="comment">Cause of Forest Fire</string>
    <string name="report_boundary_dispute_resolution">Boundary Dispute Resolution</string>
    <string name="logout">Logout</string>
    <string name="report_boundary_dispute">Report boundary Dispute</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>
    <string name="report_forest_fire">Report Forest Fire</string>
    <string name="report_deforestation">Report Deforestation</string>
    <string name="add_tree">Add Tree</string>
    <string name="name_of_reporter">Name of Reporter</string>
    <string name="resolution_location">Resolution Location</string>
    <string name="submit_report">Report Resolution</string>
    <string name="enter_latitude_optional">Enter latitude(Optional)</string>
    <string name="enter_longitude_optional">Enter longitude(Optional)</string>
    <string name="planting_location">Enter your current address</string>
    <string name="enter_coordinate_manually_optional">Enter Coordinate Manually(Optional)</string>
    <string name="email_of_witness">Email of witness</string>
    <string name="name_of_witness">Name of Witness</string>
    <string name="email_of_disputer_2">Email of Disputer 2</string>
    <string name="name_of_disputer_2">Name of Disputer 2</string>
    <string name="email_of_disputer_1">Email of Disputer 1</string>
    <string name="name_of_disputer_1">Name of Disputer 1</string>
    <string name="about_us">About Us</string>
    <string name="about_us_title"> Welcome to the Seldavine Tree Tracker App</string>
    <string name="about_us_text"> The Seldavine Tree Tracker App Enables tracking of planted trees,
        forest fire and removed trees with the ability to take tree coordinates,
        no of trees, reporter name, tree(s) types and tree(s) image.
        It also enables reporting of resolution of boundary disputes with
        a copy of the agreement sent to both parties and the witnesses via their emails.
        Every reporter gets 2 points for reporting a planted economic tree
        and 1 point for reporting a planted non economic tree and a removed tree.

    </string>
    <string name="muta">1 planted Economic tree reported= 2points= 1 Muta</string>
    <string name="madiba"> 1 planted non Economic tree reported = 1 point = 1 Madiba</string>
    <string name="ghandi"> 1 removed tree reported = 1 point = 1 Ghandi</string>
    <string name="info2">Phone number: +2348059069092
    </string>
    <string name="info1">website: http://www.seldavine.com </string>
    <string name="info3">email: seldaven@gmail.com</string>
    <string name="info4">© Seldavine Tree Tracker, 2018</string>

</resources>
