<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.AboutUs">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:id="@+id/about_us_title"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorGreen"
            android:padding="2dp"
            android:text="@string/about_us_title"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.codesgood.views.JustifiedTextView
            android:id="@+id/tv_justified_paragraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:padding="10dp"
            android:text="@string/about_us_text"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <com.codesgood.views.JustifiedTextView
            android:id="@+id/muta_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:padding="10dp"
            android:text="@string/muta"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_justified_paragraph"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_justified_paragraph"
            app:layout_constraintTop_toBottomOf="@+id/tv_justified_paragraph" />

        <com.codesgood.views.JustifiedTextView
            android:id="@+id/madiba_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/madiba"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <com.codesgood.views.JustifiedTextView
            android:id="@+id/ghandi_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:padding="10dp"
            android:text="@string/ghandi"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="30dp"
            android:id="@+id/tribbute1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:text="@string/info1"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"

            />
        <TextView
            android:layout_marginTop="-30dp"
            android:id="@+id/tribbute2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:text="@string/info2"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_marginTop="-30dp"
            android:id="@+id/tribbute3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:text="@string/info3"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/tribbute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:padding="10dp"
            android:text="@string/info4"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            />

    </LinearLayout>

</ScrollView>