<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.iduma.tree_tracking.Activities.ReportDeforestation">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_addtreeImages"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="14dp"
            android:src="@drawable/treee" />

        <ImageView
            android:id="@+id/iv_add_tree1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@id/iv_addtreeImages"
            android:layout_alignEnd="@id/iv_addtreeImages"
            android:layout_alignRight="@id/iv_addtreeImages"
            app:srcCompat="@drawable/ic_photo_camera" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_add_tree1"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/tv_tree_coordinates1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/box"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_person_name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_tree_coordinates1"
                android:layout_marginTop="10dp"
                android:background="@drawable/box"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etNoTrees1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_person_name1"
                android:layout_marginTop="10dp"
                android:background="@drawable/box"
                android:hint="@string/noofTrees"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
           <LinearLayout
               android:background="@drawable/box"
               android:orientation="vertical"
               android:layout_below="@id/etNoTrees1"
               android:id="@+id/etManualCoordinate"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <TextView
                   android:padding="10dp"
                   android:textStyle="bold"
                   android:textSize="15dp"
                   android:layout_marginTop="10dp"
                   android:textColor="@color/green"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/enter_coordinate_manually_optional"/>

               <EditText
                   android:id="@+id/etDefManualLong"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:background="@drawable/box"
                   android:hint="@string/enter_longitude_optional"
                   android:inputType="numberDecimal"
                   android:padding="10dp"
                   android:imeOptions="actionNext"
                   android:textColor="@android:color/black"
                   android:textSize="18sp" />
               <EditText
                   android:id="@+id/etDefManualLat"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:background="@drawable/box"
                   android:hint="@string/enter_latitude_optional"
                   android:inputType="numberDecimal"
                   android:padding="10dp"
                   android:imeOptions="actionNext"
                   android:textColor="@android:color/black"
                   android:textSize="18sp" />
               <EditText
                   android:id="@+id/etDefManualAddress"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:background="@drawable/box"
                   android:hint="@string/planting_location"
                   android:imeOptions="actionNext"
                   android:inputType="textCapSentences"
                   android:padding="10dp"
                   android:textColor="@android:color/black"
                   android:textSize="18sp" />

           </LinearLayout>

            <Spinner
                android:id="@+id/spTreeType1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etManualCoordinate"
                android:layout_marginTop="10dp"
                android:entries="@array/TreeType"
                android:background="@drawable/box"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/submit_tree1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/spTreeType1"
                android:layout_marginTop="25dp"
                android:background="@drawable/submitbox"
                android:text="@string/submitTree1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>

    </RelativeLayout>


</ScrollView>
